--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Clayton Magalhães - Portfólio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Clayton Magalhães</h1>
+        <p>Portfólio Pessoal</p>
+    </header>
 
+    <main>
+        <section class="sobre">
+            <h2>Sobre Mim</h2>
+            <p>Sou uma pessoa determinada e focada em alcançar resultados com qualidade. Minhas principais qualidades são:</p>
+            <ul>
+                <li><strong>Eficiência</strong> – sempre busco soluções rápidas e eficazes.</li>
+                <li><strong>Controle</strong> – tenho facilidade em lidar com pressão e manter o foco.</li>
+                <li><strong>Corajoso</strong> – não fujo de desafios e estou sempre pronto para aprender.</li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 Clayton Magalhães</p>
+    </footer>
+</body>
+</html>
